beta 1. default works for arenaitem 2. placeholders everywhere papi + minimessage if supported 3. refactor all guis for better action mgmt 4. Config defaults are now good and not shit values 5. HBM backs does not issue when clicking air 6. refresh arenas works everytime even if hbm crashes